Made separate methods for creating and displaying calendar. Current day is more visible now